Basic valid move check.

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </nav>
         <main>
             <div class="gameboard">
-                <div class="cell" data-index="0">x</div>
-                <div class="cell" data-index="1">x</div>
-                <div class="cell" data-index="2">x</div>
-                <div class="cell" data-index="3">x</div>
-                <div class="cell" data-index="4">x</div>
-                <div class="cell" data-index="5">x</div>
-                <div class="cell" data-index="6">x</div>
-                <div class="cell" data-index="7">x</div>
-                <div class="cell" data-index="8">x</div>
+                <div class="cell" data-index="0"></div>
+                <div class="cell" data-index="1"></div>
+                <div class="cell" data-index="2"></div>
+                <div class="cell" data-index="3"></div>
+                <div class="cell" data-index="4"></div>
+                <div class="cell" data-index="5"></div>
+                <div class="cell" data-index="6"></div>
+                <div class="cell" data-index="7"></div>
+                <div class="cell" data-index="8"></div>
               </div>
         </main>
     </div>
