Reset grid and array.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
                 <div class="cell" data-index="6"></div>
                 <div class="cell" data-index="7"></div>
                 <div class="cell" data-index="8"></div>
-              </div>
+            </div>
+            <div class="restartArea">
+                <button id="restartBtn">Restart</button>
+            </div>
         </main>
+
     </div>
+
     <footer>
-        content
+        <strong>AlbanMarku</strong>
+        <a href="https://github.com/AlbanMarku"><img class="floating" src="pics/logo.png" alt="git Logo"></a>
     </footer>
 </body>
 </html>
